# django-json-logging

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  noxfile.py  pyproject.toml  setup.cfg  setup.py  tests.py
.github/workflows/: push.yml  python-publish.yml
django-json-logging/: filters.py  formatters.py
django_json_logging/: formatters.py  serializers.py  settings.py
tests/: test_settings.py
tests/tests/: test_formatter.py  test_orjson_serializer.py
