[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-json-logger"
version = "0.1.1"
description = "A Django app to logging in json format."
readme = "README.md"
authors = [{ name = "Maksim Kopytov", email = "misst3rr@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: Freeware",
    "Framework :: Django",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "django >= 3.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["black", "isort", "orjson", "ujson"]
orjson = ["orjson>=3.4.3",]
ujson = ["ujson>=4.2.0",]

[project.urls]
Homepage = "https://github.com/missterr/django-json-logging"

[tool.black]
exclude = '\w+/migrations/\w+'
line-length = 120

[tool.isort]
line_length = 120
profile = "black"