[metadata]
name = django-json-logging
version = 0.1
description = A Django app to logging in json format.
long_description = file: README.rst
url = https://github.com/missterr/django-json-logging
author = Maksim Kopytov
author_email = misst3rr@gmail.com
license = Unlicensed
classifiers =
    License :: Freeware
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = true
packages = find:
setup_requires =
    django>=2.0
    orjson==3.3.1