[metadata]
name = django_json_logging
version = 0.3.0
description = A Django app to logging in json format.
long_description = file: README.md
url = https://github.com/missterr/django-json-logging
author = Maksim Kopytov
author_email = misst3rr@gmail.com
license = Unlicensed
classifiers =
    License :: Freeware
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = true
packages = find:
install_requires =
    django>=2.0

[options.extras_require]
orjson = orjson>=3.4.3
ujson = ujson>=4.2.0